[XForms] Fix crash on empty instances. Bug 333113. r=smaug+doronr. NPOTB